--- a/.percy.yml
+++ b/.percy.yml
@@ -13,4 +13,5 @@ storybook:
       '/MultiAddSelect: With Avatars/', # avoid dynamic avatar color generation
       '/Tag set/TagSet: Hundreds Of Tags', # avoid dynamic tag color generation
       '/Page header/PageHeader: Page header with all items, pre-collapsed', # takes random time, to collapse on initial load
+      '/Tag set/TagSet: Many Tags', # takes time to calculate the overflow, causing random layout shift
     ]
