--- a/package.json
+++ b/package.json
@@ -70,48 +70,48 @@
     "upgrade:manual": "sh ./scripts/monorepo-npm-upgrade.sh"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/eslint-parser": "^7.23.9",
-    "@babel/preset-react": "^7.17.12",
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@playwright/test": "^1.36.2",
+    "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.25.9",
+    "@babel/preset-react": "^7.25.9",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@playwright/test": "^1.48.2",
     "@testing-library/dom": "^8.11.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/carbon__layout": "^0.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "accessibility-checker": "^3.1.65",
-    "cheerio": "^1.0.0-rc.12",
-    "commander": "^12.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "accessibility-checker": "^3.1.78",
+    "cheerio": "^1.0.0",
+    "commander": "^12.1.0",
     "copyfiles": "^2.4.1",
-    "cspell": "^8.3.2",
-    "eslint": "^8.56.0",
+    "cspell": "^8.16.0",
+    "eslint": "^9.14.0",
     "eslint-config-carbon": "3.17.1",
     "eslint-plugin-ssr-friendly": "^1.3.0",
     "gitignore-to-glob": "^0.3.0",
-    "globby": "^14.0.0",
-    "husky": "^9.0.5",
+    "globby": "^14.0.2",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-canvas-mock": "2.5.2",
     "jest-junit": "^16.0.0",
     "json": "^11.0.0",
-    "lerna": "^8.0.2",
-    "lint-staged": "^15.2.0",
-    "npm-check-updates": "^16.14.12",
+    "lerna": "^8.1.9",
+    "lint-staged": "^15.2.10",
+    "npm-check-updates": "^17.1.11",
     "npm-run-all": "^4.1.5",
     "npm-upgrade": "^3.1.0",
-    "postcss": "^8.4.33",
-    "prettier": "^2.8.8",
+    "postcss": "^8.4.49",
+    "prettier": "^3.3.3",
     "prettier-config-carbon": "^0.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^5.0.5",
-    "stylelint": "^15.11.0",
+    "rimraf": "^6.0.1",
+    "stylelint": "^16.10.0",
     "stylelint-config-carbon": "1.19.1",
-    "webpack": "^5.90.0"
+    "webpack": "^5.96.1"
   },
   "//resolutions:http-signature": "package 'request' deprecated but still used, asks for http-signature ~1.2.0 which indirectly has vulnerabilities",
   "//resolutions:minimist": "https://security.snyk.io/vuln/SNYK-JS-MINIMIST-2429795 (version <=1.2.5)",
@@ -282,5 +282,5 @@
       "no-duplicate-selectors": null
     }
   },
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.5.1"
 }
