--- a/.percy.yml
+++ b/.percy.yml
@@ -1,6 +1,8 @@
 # Percy config
 version: 2
 snapshot:
+  discovery:
+    network_idle_timeout: 1000
   widths:
     - 360
     - 1366
@@ -14,4 +16,6 @@ storybook:
       '/Tag set/TagSet: Hundreds Of Tags', # avoid dynamic tag color generation
       '/Page header/PageHeader: Page header with all items, pre-collapsed', # takes random time, to collapse on initial load
       '/Tag set/TagSet: Many Tags', # takes time to calculate the overflow, causing random layout shift
+      'Cascade: With Grid', # no need of vrt for a utility
+      'Cascade: Without Grid', # no need of vrt for a utility
     ]
