--- a/.percy.yml
+++ b/.percy.yml
@@ -6,16 +6,17 @@ snapshot:
     - 1366
   minHeight: 1024
 discovery:
-  network_idle_timeout: 700
+  network_idle_timeout: 500
 storybook:
   include: ['/IBM Products/']
   exclude: [
       '/Datagrid/*',
       '/DataSpreadsheet/',
+      'Cascade: With Grid',
+      'Cascade: Without Grid',
+      # to be fixed
       '/MultiAddSelect: With Avatars/', # avoid dynamic avatar color generation
       '/Tag set/TagSet: Hundreds Of Tags', # avoid dynamic tag color generation
-      '/Page header/PageHeader: Page header with all items, pre-collapsed', # takes random time, to collapse on initial load
+      '/Page header/PageHeader: Page header with all items, pre-collapsed', # takes random time, to collapse on initial load.
       '/Tag set/TagSet: Many Tags', # takes time to calculate the overflow, causing random layout shift
-      'Cascade: With Grid', # no need of vrt for a utility
-      'Cascade: Without Grid', # no need of vrt for a utility
     ]
