--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "rimraf": "^5.0.5",
     "stylelint": "^15.11.0",
     "stylelint-config-carbon": "1.19.1",
-    "webpack": "^5.90.0"
+    "webpack": "^5.96.1"
   },
   "//resolutions:http-signature": "package 'request' deprecated but still used, asks for http-signature ~1.2.0 which indirectly has vulnerabilities",
   "//resolutions:minimist": "https://security.snyk.io/vuln/SNYK-JS-MINIMIST-2429795 (version <=1.2.5)",
@@ -122,6 +122,7 @@
     "cheerio": "1.0.0-rc.10",
     "cross-spawn": "7.0.6",
     "micromatch": "4.0.8",
+    "semver": "7.6.3",
     "ws": "^8.17.1"
   },
   "lint-staged": {
