--- a/package.json
+++ b/package.json
@@ -143,7 +143,7 @@
     ]
   },
   "dependencies": {
-    "stylelint-plugin-carbon-tokens": "2.8.0"
+    "stylelint-plugin-carbon-tokens": "^3.2.1"
   },
   "packageManager": "yarn@4.0.2"
 }
