fix: use installation id from carbon automation gh app

--- a/.github/workflows/process-pr-review-data.yml
+++ b/.github/workflows/process-pr-review-data.yml
@@ -26,3 +26,4 @@ jobs:
         with:
           APP_ID: ${{ secrets.APP_ID }}
           APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
+          APP_INSTALLATION_ID: ${{ secrets.APP_INSTALLATION_ID }}
