--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -117,7 +117,7 @@
     "@carbon/react": "^1.71.1",
     "@carbon/themes": "^11.43.0",
     "@carbon/type": "^11.33.0",
-    "react": "^16.8.6 || ^17.0.1 || ^18.2.0",
-    "react-dom": "^16.8.6 || ^17.0.1 || ^18.2.0"
+    "react": "^16.8.6 || ^17.0.1 || ^18.2.0 || ^19.0.0",
+    "react-dom": "^16.8.6 || ^17.0.1 || ^18.2.0 || ^19.0.0"
   }
 }
