--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -86,6 +86,8 @@
     "namor": "^1.1.2",
     "npm-check-updates": "^16.14.12",
     "npm-run-all": "^4.1.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.27.3",
     "rollup-plugin-strip-banner": "^3.1.0",
