--- a/.github/workflows/process-pr-review-data.yml
+++ b/.github/workflows/process-pr-review-data.yml
@@ -16,6 +16,7 @@ jobs:
       github.event.workflow_run.event == 'pull_request_review' &&
       github.event.workflow_run.conclusion == 'success'
     steps:
+      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
       - uses: ./actions/add-review-labels
         with:
           APP_ID: ${{ secrets.APP_ID }}
