--- a/package.json
+++ b/package.json
@@ -81,8 +81,6 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/carbon__layout": "^0.0.3",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "accessibility-checker": "^3.1.78",
@@ -117,6 +115,8 @@
   "//resolutions:http-signature": "package 'request' deprecated but still used, asks for http-signature ~1.2.0 which indirectly has vulnerabilities",
   "//resolutions:minimist": "https://security.snyk.io/vuln/SNYK-JS-MINIMIST-2429795 (version <=1.2.5)",
   "resolutions": {
+    "@types/react": "~19.0.0",
+    "@types/prop-types": "^15.7.14",
     "body-parser": "1.20.3",
     "braces": "^3.0.3",
     "cheerio": "1.0.0-rc.10",
