--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -49,6 +49,18 @@ jobs:
         run: |
           git checkout -b chore/${{ github.event.inputs.tag }}-release
           git push origin chore/${{ github.event.inputs.tag }}-release
+      
+      # Check for conflicts and if exists resolve it
+      - name: Check for conflicts and resolve
+        run: |
+          git merge origin/main
+          if [ $? -ne 0 ]; then
+            echo "Merge conflicts detected"
+            # Resolve conflicts by choosing current version as latest than main
+            git checkout --ours .
+            git add .
+            git commit -m "chore: resolved merge conflicts"
+      
       # Create PR with the new branch
       - name: Create Pull Request
         run: |
