--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@carbon/icons": "^11.53.0",
+    "@carbon/icon-helpers": "^10.54.0",
     "@carbon/motion": "^11.24.0",
     "@mordech/vite-lit-loader": "^0.35.0",
     "@rollup/plugin-alias": "^5.1.1",
