--- a/.github/workflows/update-example-gallery.yml
+++ b/.github/workflows/update-example-gallery.yml
@@ -20,7 +20,7 @@ jobs:
           cache: yarn
 
       - name: Cache dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 #4.2.0
         with:
           path: '**/node_modules'
           key: check-gallery-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
