--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ci-check:tests": "run-p -s 'ci-check:test:*'",
     "ci-check:test:c4p": "yarn test:c4p --ci",
     "ci-check:test:c4p:snapshot": "yarn test:c4p:snapshot --ci",
-    "ci-check:test:c4p-wc": "yarn test:c4p-wc",
+    "ci-check:test:c4p:wc": "yarn test:c4p:wc",
     "ci-check:spellcheck": "yarn spellcheck",
     "clean": "run-p -s 'clean:*' && run-p -s 'clean:finally:*'",
     "clean:cache": "yarn cache clean",
@@ -49,9 +49,9 @@
     "run-all": "lerna run --stream --prefix --loglevel success",
     "test": "run-p -s 'test:*'",
     "test:c4p": "lerna run --stream --scope @carbon/ibm-products test --",
-    "test:c4p:snapshot": "yarn test:c4p-styles styles -u",
-    "test:c4p-styles": "lerna run --stream --scope @carbon/ibm-products-styles test --",
-    "test:c4p-wc": "yarn playwright install && lerna run --stream --scope @carbon/ibm-products-web-components test --",
+    "test:c4p:snapshot": "yarn test:c4p:styles styles -u",
+    "test:c4p:styles": "lerna run --stream --scope @carbon/ibm-products-styles test --",
+    "test:c4p:wc": "yarn playwright install && lerna run --stream --scope @carbon/ibm-products-web-components test --",
     "spellcheck": "cspell '**' -e './examples' --gitignore --quiet --no-must-find-files",
     "storybook": "yarn storybook:start",
     "storybook:build": "run-s -s 'storybook:build:*'",
