--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -55,6 +55,7 @@
     "lit": "^3.1.0"
   },
   "devDependencies": {
+    "@carbon/icon-helpers": "^10.54.0",
     "@carbon/icons": "^11.53.0",
     "@carbon/motion": "^11.24.0",
     "@mordech/vite-lit-loader": "^0.35.0",
