--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -58,7 +58,8 @@
     "@carbon/ibm-products-styles": "^2.53.0",
     "@carbon/styles": "1.71.0",
     "@carbon/web-components": "2.19.0",
-    "lit": "^3.1.0"
+    "lit": "^3.1.0",
+    "tslib": "^2.6.3"
   },
   "devDependencies": {
     "@carbon/icon-helpers": "^10.54.0",
