--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
         run: yarn
       - name: CI build checks
         run: yarn ci-check:build
+      - codecov/upload:
+        flags: exclude_deprecated
 
   format:
     runs-on: ubuntu-latest
@@ -123,6 +125,8 @@ jobs:
         uses: codecov/codecov-action@e28ff129e5465c2c0dcc6f003fc735cb6ae0c673 # v4.5.0
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          flags: exclude_deprecated
       - name: CI snapshot tests for c4p
         run: yarn ci-check:test:c4p:snapshot
   test-c4p-wc:
