--- a/.github/workflows/update-example-gallery.yml
+++ b/.github/workflows/update-example-gallery.yml
@@ -28,6 +28,13 @@ jobs:
       - name: Install
         run: yarn
 
+      - name: Generate token
+        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a #v2.1.0
+        id: generate_token
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
+
       - name: Check gallery
         id: up_to_date
         run: |
@@ -47,7 +54,7 @@ jobs:
         id: create-pr
         uses: peter-evans/create-pull-request@v4
         with:
-          token: ${{ secrets.CREATE_PR_ACCESS_TOKEN }}
+          token: ${{ secrets.generate_token.outputs.token }}
           commit-message: 'chore: update example gallery'
           committer: GitHub <noreply@github.com>
           author:
