--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -45,8 +45,8 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 3000",
     "test": "vitest run",
-    "test:ui": "vitest --ui",
-    "wca": "web-component-analyzer analyze src --outFile custom-elements.json"
+    "wca": "web-component-analyzer analyze src --outFile custom-elements.json",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@carbon/ibm-products-styles": "^2.54.0-rc.0",
@@ -74,9 +74,10 @@
     "@storybook/web-components": "^8.4.5",
     "@storybook/web-components-vite": "^8.4.5",
     "@types/jest": "^29.5.13",
-    "@vitest/browser": "latest",
-    "@vitest/ui": "latest",
+    "@vitest/browser": "^3.0.1",
+    "@vitest/coverage-v8": "^3.0.1",
     "autoprefixer": "^10.4.20",
+    "c8": "^10.1.3",
     "cssnano": "^7.0.6",
     "eslint": "^9.11.1",
     "eslint-config-carbon": "3.18.0",
@@ -92,7 +93,7 @@
     "storybook-addon-accessibility-checker": "^3.1.61-rc.3",
     "typescript": "^5.5.3",
     "vite": "^6.0.3",
-    "vitest": "^2.1.2",
+    "vitest": "^3.0.1",
     "web-component-analyzer": "2.0.0"
   }
 }
