--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "clean:packages": "yarn run-all --no-sort clean",
     "coverage": "echo 'you can pass a name argument to specify which tests are ran such as `yarn coverage decorator` and then view the results with `yarn coverage:report`'; yarn test:c4p --coverage",
     "coverage:report": "open ./packages/ibm-products/coverage/index.html",
-    "wc-coverage": "cd packages/ibm-products-web-components && yarn coverage",
     "format": "run-p -s 'format:*'",
     "format:config": "prettier ./*.{js,jsx,tsx,ts,md,scss} --write --ignore-unknown",
     "format:packages": "prettier ./packages/**/*.{js,jsx,tsx,ts,md,scss} --write --ignore-unknown",
@@ -68,7 +67,8 @@
     "upgrade:dependencies:examples": "npm-check-updates -u --dep dev,peer,prod --color --target minor --packageFile 'scripts/example-gallery-builder/update-example/**/package.json'",
     "upgrade:automatic": "run-s -s 'upgrade:dependencies:*'",
     "upgrade:carbon": "npm-check-updates -u --dep dev,peer,prod --packageFile '{package.json,{config/**,packages/**}/package.json}' --filter '/carbon/' --target minor",
-    "visual-snapshot": "cd packages/core && yarn percy storybook storybook-static"
+    "visual-snapshot": "cd packages/core && yarn percy storybook storybook-static",
+    "wc-coverage": "cd packages/ibm-products-web-components && yarn coverage"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
