--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -52,8 +52,7 @@
     "@carbon/ibm-products-styles": "^2.54.0-rc.0",
     "@carbon/styles": "1.71.0",
     "@carbon/web-components": "2.19.0",
-    "lit": "^3.1.0",
-    "tslib": "^2.6.3"
+    "lit": "^3.1.0"
   },
   "devDependencies": {
     "@carbon/icon-helpers": "^10.54.0",
@@ -90,6 +89,7 @@
     "sass": "^1.80.6",
     "storybook": "^8.4.5",
     "storybook-addon-accessibility-checker": "^3.1.61-rc.3",
+    "tslib": "^2.8.1",
     "typescript": "^5.5.3",
     "vite": "^6.0.3",
     "vitest": "^2.1.2",
