--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -74,8 +74,8 @@
     "@storybook/web-components": "^8.4.5",
     "@storybook/web-components-vite": "^8.4.5",
     "@types/jest": "^29.5.13",
-    "@vitest/browser": "latest",
-    "@vitest/ui": "latest",
+    "@vitest/browser": "^3.0.1",
+    "@vitest/coverage-v8": "^3.0.1",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "eslint": "^8.56.0",
@@ -92,7 +92,7 @@
     "storybook-addon-accessibility-checker": "^3.1.61-rc.3",
     "typescript": "^5.5.3",
     "vite": "^6.0.3",
-    "vitest": "^2.1.2",
+    "vitest": "^3.0.1",
     "web-component-analyzer": "2.0.0"
   }
 }
