--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -39,7 +39,7 @@
     "web components"
   ],
   "scripts": {
-    "build": "node tasks/build.js && yarn wca",
+    "build": "yarn clean && node tasks/build.js && yarn wca",
     "build:storybook": "storybook build",
     "clean": "rimraf es lib scss dist storybook-static",
     "preview": "vite preview",
@@ -52,8 +52,7 @@
     "@carbon/ibm-products-styles": "^2.54.0",
     "@carbon/styles": "1.71.0",
     "@carbon/web-components": "2.19.0",
-    "lit": "^3.1.0",
-    "tslib": "^2.6.3"
+    "lit": "^3.1.0"
   },
   "devDependencies": {
     "@carbon/icon-helpers": "^10.54.0",
@@ -78,7 +77,7 @@
     "@vitest/ui": "latest",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
-    "eslint": "^9.11.1",
+    "eslint": "^8.56.0",
     "eslint-config-carbon": "3.18.0",
     "globby": "^14.0.2",
     "happy-dom": "^15.11.6",
@@ -90,6 +89,7 @@
     "sass": "^1.80.6",
     "storybook": "^8.4.5",
     "storybook-addon-accessibility-checker": "^3.1.61-rc.3",
+    "tslib": "^2.8.1",
     "typescript": "^5.5.3",
     "vite": "^6.0.3",
     "vitest": "^2.1.2",
