--- a/package.json
+++ b/package.json
@@ -142,7 +142,8 @@
     ]
   },
   "dependencies": {
-    "stylelint-plugin-carbon-tokens": "^3.2.1"
+    "stylelint-plugin-carbon-tokens": "^3.2.1",
+    "stylelint-use-logical": "^2.1.2"
   },
   "packageManager": "yarn@4.0.2"
 }
