--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@babel/preset-react": "^7.17.12",
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
+    "@eslint/compat": "^1.2.5",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.19.0",
     "@playwright/test": "^1.49.1",
@@ -83,7 +84,9 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/carbon__layout": "^0.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
     "accessibility-checker": "^3.1.78",
+    "babel-preset-carbon": "^0.0.14",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^12.0.0",
     "copyfiles": "^2.4.1",
