--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "eslint": "^9.19.0",
     "eslint-config-carbon": "^3.19.0-rc.0",
     "eslint-config-love": "^118.0.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-ssr-friendly": "^1.3.0",
@@ -117,6 +118,7 @@
     "rimraf": "^5.0.5",
     "stylelint": "^16.10.0",
     "stylelint-config-carbon": "^1.20.0",
+    "typescript-config-carbon": "^0.3.0",
     "typescript-eslint": "^8.22.0",
     "webpack": "^5.96.1"
   },
