--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "copyfiles": "^2.4.1",
     "cspell": "^8.3.2",
     "eslint": "^9.19.0",
-    "eslint-config-carbon": "^3.19.0-rc.0",
+    "eslint-config-carbon": "^3.19.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
