--- a/package.json
+++ b/package.json
@@ -76,23 +76,29 @@
     "@babel/preset-react": "^7.17.12",
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
+    "@eslint/compat": "^1.2.5",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.19.0",
     "@playwright/test": "^1.49.1",
     "@testing-library/dom": "^8.11.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/carbon__layout": "^0.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
     "accessibility-checker": "^3.1.78",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^12.0.0",
     "copyfiles": "^2.4.1",
     "cspell": "^8.3.2",
-    "eslint": "^8.56.0",
-    "eslint-config-carbon": "3.17.1",
+    "eslint": "^9.19.0",
+    "eslint-config-carbon": "^3.19.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-ssr-friendly": "^1.3.0",
     "gitignore-to-glob": "^0.3.0",
+    "globals": "^15.14.0",
     "globby": "^14.0.0",
     "husky": "^9.0.5",
     "jest": "^29.7.0",
@@ -112,6 +118,7 @@
     "stylelint": "^16.10.0",
     "stylelint-config-carbon": "^1.20.0",
     "stylelint-use-logical": "^2.1.2",
+    "typescript-eslint": "^8.22.0",
     "webpack": "^5.96.1"
   },
   "//resolutions:http-signature": "package 'request' deprecated but still used, asks for http-signature ~1.2.0 which indirectly has vulnerabilities",
@@ -126,7 +133,7 @@
     "ws": "^8.17.1"
   },
   "lint-staged": {
-    "!(examples/**/*)**/*.{js,jsx,ts,tsx}": [
+    "!(examples/**/*)**/*.{js,jsx,ts,tsx,mjs}": [
       "npx prettier --cache --write",
       "npx eslint --fix",
       "npx cspell --no-must-find-files",
