--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -78,8 +78,8 @@
     "autoprefixer": "^10.4.20",
     "c8": "^10.1.3",
     "cssnano": "^7.0.6",
-    "eslint": "^8.56.0",
-    "eslint-config-carbon": "3.18.0",
+    "eslint": "^9.14.0",
+    "eslint-config-carbon": "^3.19.0",
     "globby": "^14.0.2",
     "happy-dom": "^15.11.6",
     "postcss": "^8.4.47",
