--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -55,10 +55,12 @@
     "lit": "^3.1.0"
   },
   "devDependencies": {
+    "@blockquote/rollup-plugin-externalize-source-dependencies": "^1.0.0",
     "@carbon/icon-helpers": "^10.54.0",
     "@carbon/icons": "^11.55.0",
     "@carbon/motion": "^11.24.0",
     "@mordech/vite-lit-loader": "^0.35.0",
+    "@open-wc/testing": "^4.0.0",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-json": "^6.1.0",
