--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -55,6 +55,7 @@
     "lit": "^3.1.0"
   },
   "devDependencies": {
+    "@blockquote/rollup-plugin-externalize-source-dependencies": "^1.0.0",
     "@carbon/icon-helpers": "^10.54.0",
     "@carbon/icons": "^11.55.0",
     "@carbon/motion": "^11.24.0",
