--- a/examples/carbon-for-ibm-products/CoachmarkOverlayElementsWithAnimatedMedia/package.json
+++ b/examples/carbon-for-ibm-products/CoachmarkOverlayElementsWithAnimatedMedia/package.json
@@ -22,10 +22,10 @@
   "dependencies": {
     "@carbon/ibm-products": "^2.21.0",
     "@carbon/react": "^1.60.3",
-    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "lottie-web": "^5.12.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
