--- a/config/storybook-addon-carbon-theme/package.json
+++ b/config/storybook-addon-carbon-theme/package.json
@@ -46,13 +46,13 @@
   },
   "dependencies": {
     "@ibm/telemetry-js": "^1.8.0",
-    "@storybook/addons": "^7.6.17",
-    "@storybook/api": "^7.6.17",
-    "@storybook/client-api": "^7.6.17",
-    "@storybook/client-logger": "^8.4.7",
-    "@storybook/components": "^8.4.7",
-    "@storybook/core-events": "^8.4.7",
-    "@storybook/theming": "^8.4.7",
+    "@storybook/addons": "7.6.17",
+    "@storybook/api": "7.6.17",
+    "@storybook/client-api": "7.6.17",
+    "@storybook/client-logger": "^8.6.2",
+    "@storybook/components": "^8.6.2",
+    "@storybook/core-events": "^8.6.2",
+    "@storybook/theming": "^8.6.2",
     "core-js": "^3.40.0",
     "global": "^4.4.0"
   },
