chore: correct patch and add children

--- a/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/gallery.config.json
+++ b/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia/gallery.config.json
@@ -3,10 +3,9 @@
   "package-config": {
     "flags": {
       "component": {
-        "CoachmarkOverlayElements": true,
-        "Coachmark":true,
-        "CoachmarkOverlayElement":true,
-        "CoachmarkBeacon":true
+        "InterstitialScreen": true,
+        "InterstitialScreenView": true,
+        "InterstitialScreenViewModule": true
       }
     }
   },
