--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "sync": "carbon-cli sync",
     "update-gallery-config": "node scripts/example-gallery-builder/index.js; prettier examples/carbon-for-ibm-products/**/src/**/*.{js,jsx,md,mdx,scss,json} --write --loglevel=silent",
     "//upgrade:dependencies:top": "# don't upgrade carbon (done globally), react/react-dom (not tested)",
-    "upgrade:dependencies:top": "npm-check-updates -u --dep dev,peer,prod --reject '/(carbon|^react$|^react-dom$|^@testing-library)/'",
+    "upgrade:dependencies:top": "npm-check-updates -u --dep dev,peer,prod --reject '/(carbon|^react$|^react-dom$|^@testing-library|^commander)/'",
     "upgrade:dependencies:packages": "yarn run-all --no-sort --concurrency 1 upgrade-dependencies",
     "upgrade:dependencies:examples": "npm-check-updates -u --dep dev,peer,prod --color --target minor --packageFile 'scripts/example-gallery-builder/update-example/**/package.json'",
     "upgrade:automatic": "run-s -s 'upgrade:dependencies:*'",
@@ -88,7 +88,7 @@
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "accessibility-checker": "^4.0.2",
     "cheerio": "^1.0.0",
-    "commander": "^13.1.0",
+    "commander": "^12.0.0",
     "copyfiles": "^2.4.1",
     "cspell": "^8.17.5",
     "eslint": "^9.21.0",
