feat: adds build step to wc

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,8 @@ jobs:
       - name: Install browsers
         working-directory: packages/ibm-products-web-components
         run: yarn playwright install --with-deps
+      - name: Build web-components project
+        run: yarn build:packages
       - name: CI tests for products web components
         run: yarn ci-check:test:c4p-wc
 
