fix: frozen lock file step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,11 +140,9 @@ jobs:
             test-c4p-react-major-versions-modules-${{ runner.os }}-${{
             hashFiles('yarn.lock') }}
       - name: Install
-        run: yarn
+        run: yarn --frozen-lockfile
       - name: Install React version ${{ matrix.react }}
-        run:
-          yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
-          --frozen-lockfile
+        run: yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
       - name: CI tests for c4p with React version ${{ matrix.react }}
         run: yarn ci-check:test:c4p
   test-c4p-wc:
