fix: change testing version in matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,6 +123,7 @@ jobs:
     strategy:
       matrix:
         react: [17]
+        testing-library: [12]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -140,7 +141,9 @@ jobs:
             test-c4p-react-major-versions-modules-${{ runner.os }}-${{
             hashFiles('yarn.lock') }}
       - name: Add React version ${{ matrix.react }}
-        run: yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
+        run:
+          yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
+          @testing-library/react@{{ matrix.testing-library }}
       - name: Install
         run: yarn --immutable
       - name: CI tests for c4p with React version ${{ matrix.react }}
