--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
       - name: Add React version ${{ matrix.react }}
         run:
           yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
-          @testing-library/react@{{ matrix.testing-library }}
+          @testing-library/react@${{ matrix.testing-library }}
       - name: Install
         run: yarn --immutable
       - name: CI tests for c4p with React version ${{ matrix.react }}
