fix: update additional dependencies in react 17 matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,8 +122,10 @@ jobs:
   test-c4p-react-major-version:
     strategy:
       matrix:
-        react: [17]
-        testing-library: [12]
+        carbon-react: [^1.28]
+        react: [^17]
+        react-dom: [^17]
+        testing-library: [^12]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -140,10 +142,19 @@ jobs:
           key:
             test-c4p-react-major-versions-modules-${{ runner.os }}-${{
             hashFiles('yarn.lock') }}
-      - name: Add React version ${{ matrix.react }}
+      - name: Add React version ${{ matrix.react }} dependencies
         run:
-          yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
+          yarn add react@${{ matrix.react }} react-dom@${{ matrix.react-dom }}
           @testing-library/react@${{ matrix.testing-library }}
+      - name: Add React version ${{ matrix.react }} dependencies to core
+        run:
+          yarn workspace @carbon/ibm-cloud-cognitive-core add @carbon/react@${{
+          matrix.carbon-react }} react@${{ matrix.react }} react-dom@${{
+          matrix.react-dom }} -D
+      - name: Add React version ${{ matrix.react }} dependencies to products
+        run:
+          yarn workspace @carbon/ibm-products add @carbon/react@${{
+          matrix.carbon-react }} -P
       - name: Install
         run: yarn --immutable
       - name: CI tests for c4p with React version ${{ matrix.react }}
