fix: carbon react version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         react:
           - ^17.0.1
-          - ^18.2.0
+          - ^18.3.1
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -38,6 +38,11 @@ jobs:
         run: yarn --immutable
       - name: Add React version ${{ matrix.react }}
         run: yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
+      - name: Add legacy dependencies
+        if: ${{ startsWith(matrix.react, '17.') }}
+        run: |
+          yarn workspace @carbon/ibm-cloud-cognitive-core add @carbon/react@1.28 -D
+          yarn workspace @carbon/ibm-products add @carbon/react@1.28 -P
       - name: CI build checks
         run: yarn ci-check:build
 
